# cinemas

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: .gitignore
scripts/: cinemas.py  constants.py  crimes.py  observation_classes.py
src/cinemas/: .gitignore  __init__.py  cinemas.py  constants.py  core.py  dataloading.py  likelihood.py  mcmc.py  observation_classes.py  priors.py
tests/: conftest.py  test_dataloading.py  test_imports.py  test_likelihood.py  test_mcmc.py  test_observation_classes.py  test_priors.py
