[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cinemas"
version = "0.4.0.dev0"
description = "Constraining INclinations of Exoplanets and their MAsses by Stability"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Xander Byrne", email = "xbyrne@ast.cam.ac.uk"}]
keywords = ["astronomy", "astrophysics", "exoplanets", "inference", "MCMC", "orbital mechanics", "rebound", "spock", "stability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.0",
    "tqdm>=4.50",
    "emcee>=3.0",
    "h5py>=3.0",
    "rebound>=3.0",
    "spock>=1.0",
    "pyvo>=1.0",
]

[project.urls]
"Homepage" = "https://github.com/xbyrne/cinemas"
"Bug Tracker" = "https://github.com/xbyrne/cinemas/issues"
"Documentation" = "https://github.com/xbyrne/cinemas"

[project.optional-dependencies]
dev = [
  "ipykernel>=6.29,<7",
  "pytest>=8",
]

[tool.setuptools]
packages = ["cinemas"]

[tool.setuptools.package-dir]
"" = "src"